fix: icons visible

--- a/docs/src/less/index.less
+++ b/docs/src/less/index.less
@@ -12,7 +12,9 @@ body {
 }
 
 body > svg {
-    display: none;
+    height: 0;
+    position: absolute;
+    width: 0;
 }
 
 header {
